js/docker/envoy.yaml
static_resources:
  listeners:
  - name: development
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/android.emulation.control.Rtc"
                route:
                  cluster: emulator_service_grpc
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match:
                  prefix: "/android.emulation.control"
                route:
                  cluster: emulator_service_grpc
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match:
                  prefix: "/"
                route:
                  cluster: nginx
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: ".*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                firebase_jwt:
                  issuer: https://securetoken.google.com/big-dick-emulator
                  audiences:
                  - big-dick-emulator
                  remote_jwks:
                    http_uri:
                      uri: https://www.googleapis.com/robot/v1/metadata/x509/securetoken@system.gserviceaccount.com
                      cluster: jwks_cluster
                      timeout: 60s
                    cache_duration:
                      seconds: 300
              rules:
              - match:
                  prefix: "/android.emulation.control"
                requires:
                  provider_name: "firebase_jwt"
              - match:
                  prefix: "/android.emulation.control.Rtc"
                requires:
                  provider_name: "firebase_jwt"
          - name: envoy.filters.http.grpc_web
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: jwks_cluster
    connect_timeout: 100s
    dns_lookup_family: V4_ONLY
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: jwks_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: googleapis.com
                port_value: 443
  - name: emulator_service_grpc
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: emulator_service_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: emulator
                port_value: 8554
  - name: nginx
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: nginx
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nginx
                port_value: 80
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
